Moved implementation to ShadowBundle, Changed EventHandler to not immediately crash the game when vosk isn't found (shouldnt happen with shadow bundling anyway)

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
 
     api "com.alphacephei:vosk:$rootProject.vosk_version"
-    include "com.alphacephei:vosk:$rootProject.vosk_version"
+    shadowBundle "com.alphacephei:vosk:$rootProject.vosk_version"
 }
 
 processResources {
