--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version = 1.1.0
-maven_group = org.modogthedev
-archives_name = voicelib
+mod_version = 1.1.01
+maven_group = com.pryzmm
+archives_name = shriek
 enabled_platforms = fabric,neoforge
 
 # Minecraft properties
-minecraft_version = 1.21.1
+minecraft_version = 1.21.2
 
 # Dependencies
-architectury_api_version = 13.0.2
+architectury_api_version = 14.0.4
 fabric_loader_version = 0.16.2
-fabric_api_version = 0.102.0+1.21.1
-neoforge_version = 21.1.22
+fabric_api_version = 0.106.1+1.21.2
+neoforge_version = 21.2.1-beta
 vosk_version = 0.3.45
