--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -4,30 +4,30 @@ loaderVersion = "[4,)"
 license = "MIT"
 
 [[mods]]
-modId = "voicelib"
+modId = "shriek"
 version = "${version}"
-displayName = "VoiceLib"
-authors = "ModogTheDev"
+displayName = "Shriek"
+authors = "Pryzmm"
 description = '''
-A Minecraft Voice Recognition Library
+A Minecraft Voice Recognition Library (Maintained from ModogTheDev)
 '''
-logoFile = "assets/voicelib/icon.png"
+logoFile = "assets/shriek/icon.png"
 
-[[dependencies.voicelib]]
+[[dependencies.shriek]]
 modId = "neoforge"
 type = "required"
 versionRange = "[21.0,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.voicelib]]
+[[dependencies.shriek]]
 modId = "minecraft"
 type = "required"
 versionRange = "[1.21,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.voicelib]]
+[[dependencies.shriek]]
 modId = "architectury"
 type = "required"
 versionRange = "[13.0.2,)"
@@ -35,4 +35,4 @@ ordering = "AFTER"
 side = "BOTH"
 
 [[mixins]]
-config = "voicelib.mixins.json"
+config = "shriek.mixins.json"
